--- a/scss/general.scss
+++ b/scss/general.scss
@@ -31,7 +31,7 @@
 .content-container {
   background-color: $main-background-color;
   margin-bottom: 2rem;
-  padding: 2rem 1rem;
+  padding: 2rem 2rem;
   border-radius: 0.3rem;
   height: auto;
 }
